# llmserverapp

./: .gitignore  build.gradle.kts  build.py  gradle.properties  log  log.py  models.json  output  releases0  settings.gradle.kts
app/: build.gradle.kts  build.gradle.kts.bak
app/src/androidTest/java/com/example/llmserverapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni.cpp.bak  llama_jni_backup.cpp  sd_jni.cpp
app/src/main/cpp/sd/: sd_clip.cpp  sd_clip.h  sd_clip_tokenizer.cpp  sd_clip_tokenizer.h  sd_engine.cpp  sd_engine.h  sd_scheduler.cpp  sd_scheduler.h  sd_unet.cpp  sd_unet.h  sd_vae.cpp  sd_vae.h  sd_weight_loader.cpp  sd_weight_loader.h
app/src/main/java/com/example/llmserverapp/: AppScope.kt  LlamaBridge.kt  LlmServerUI.kt  LlmServerUI.kt.bak  LocalHttpServer.kt  MainActivity.kt  ModelDownloadService.kt  ModelManager.kt  MyApp.kt  NetworkUtils.kt  ServerController.kt  SplashActivity.kt  StableDiffusionBridge.kt
app/src/main/java/com/example/llmserverapp/core/app/: LlmServerAppState.kt
app/src/main/java/com/example/llmserverapp/core/logging/: LogBuffer.kt  LogEntry.kt  LogLevel.kt  NativeLogBridge.kt
app/src/main/java/com/example/llmserverapp/core/models/: ModelDescriptor.kt  ModelManager.kt  RemoteModelMetadata.kt
app/src/main/java/com/example/llmserverapp/core/requests/: RequestEntry.kt
app/src/main/java/com/example/llmserverapp/core/services/: DownloadProgressBus.kt  DownloadService.kt  DownloadWorker.kt  ModelNotificationManager.kt
app/src/main/java/com/example/llmserverapp/core/utils/: AppVisibility.kt  DownloadNotifier.kt  ImageUtils.kt  PrettySize.kt  colorizeLogMessage.kt
app/src/main/java/com/example/llmserverapp/ui/navigation/: AppNavHost.kt  MainScaffold.kt  NavRoutes.kt
app/src/main/java/com/example/llmserverapp/ui/screens/: ScreenTemplate.kt
app/src/main/java/com/example/llmserverapp/ui/screens/account/: AccountScreen.kt
app/src/main/java/com/example/llmserverapp/ui/screens/home/: HomeScreen.kt
app/src/main/java/com/example/llmserverapp/ui/screens/logs/: LogsScreen.kt
app/src/main/java/com/example/llmserverapp/ui/screens/models/: ModelsScreen.kt
app/src/main/java/com/example/llmserverapp/ui/screens/server/: ServerScreen.kt  ServerScreen.kt.bak
app/src/main/java/com/example/llmserverapp/ui/screens/settings/: SettingsScreen.kt
app/src/main/java/com/example/llmserverapp/ui/screens/store/: StoreScreens.kt
app/src/main/java/com/example/llmserverapp/ui/theme/: Color.kt  Dimens.kt  LlmServerAppTheme.kt  Shapes.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_download.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/llmserverapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
